gno.land/pkg/integration/testdata/gnokey.txtar
loadpkg gno.land/r/dev/silo $WORK/silo

# test basic gnokey integrations commands
# golden files have been generated using UPDATE_SCRIPTS=true

# add a random user
adduser user1

# start gnoland
gnoland start

# query

## auth
## test1 account should be available on default
gnokey query auth/accounts/$user1_user_addr
stdout 'height: 0'
stdout 'data: {'
stdout '  "BaseAccount": {'
stdout '    "address": "'${user1_user_addr}'",'
stdout '    "coins": "[0-9]*ugnot",' # dynamic
stdout '    "public_key": null,'
stdout '    "account_number": "'${user1_account_num}'",'
stdout '    "sequence": "'${user1_account_seq}'"'
stdout '  }'
stdout '}'
! stderr '.+' # empty

## invalid gnokey command should raise an error
! gnokey query foo/bar
stdout 'Log:'
stderr '"gnokey" error: unknown request error'

## succeed json call: string
gnokey -json query vm/qeval/json -data "gno.land/r/dev/silo.Hello(\"juliette\")"
cmp stdout gnokey-json-call-string.stdout.golden
cmp stderr gnokey-json-call-string.stderr.golden


## succeed json call: error
gnokey -json query vm/qeval/json -data "gno.land/r/dev/silo.Hello(\"bernard\")"
cmp stdout gnokey-json-call-error.stdout.golden
cmp stderr gnokey-json-call-error.stderr.golden


## success json call: object
gnokey -json query vm/qeval/json -data "gno.land/r/dev/silo.GetSilo()"
cmp stdout gnokey-json-call-object.stdout.golden
cmp stderr gnokey-json-call-object.stderr.golden


## success json call: []byte
gnokey -json query vm/qeval/json -data "gno.land/r/dev/silo.GetSiloData()"
cmp stdout gnokey-json-call-bytes.stdout.golden
cmp stderr gnokey-json-call-bytes.stderr.golden

-- silo/silo.gno --
package silo

import "errors"

type Silo struct {
	Data string
}

var mysilo = Silo{
	Data: "secret message",
}

func Hello(name string) (string, error) {
	if name == "bernard" {
		return "", errors.New("not for you bernard!")
	}

	return "Hello "+name, nil
}

func GetSilo() *Silo {
	return &mysilo
}

func GetSiloData() []byte {
	return []byte(mysilo.Data)
}

-- gnokey-json-call-string.stdout.golden --
{
	"response": {
		"ResponseBase": {
			"Error": null,
			"Data": "WyJIZWxsbyBqdWxpZXR0ZSIsbnVsbF0=",
			"Events": null,
			"Log": "",
			"Info": ""
		},
		"Key": null,
		"Value": null,
		"Proof": null,
		"Height": "0"
	},
	"data": [
		"Hello juliette",
		null
	]
}

-- gnokey-json-call-string.stderr.golden --
-- gnokey-json-call-error.stdout.golden --
{
	"response": {
		"ResponseBase": {
			"Error": null,
			"Data": "WyIiLHsiJGVycm9yIjoibm90IGZvciB5b3UgYmVybmFyZCEifV0=",
			"Events": null,
			"Log": "",
			"Info": ""
		},
		"Key": null,
		"Value": null,
		"Proof": null,
		"Height": "0"
	},
	"data": [
		"",
		{
			"$error": "not for you bernard!"
		}
	]
}

-- gnokey-json-call-error.stderr.golden --
-- gnokey-json-call-error.stdout.golden --
{
	"response": {
		"ResponseBase": {
			"Error": null,
			"Data": "WyIiLHsiJGVycm9yIjoibm90IGZvciB5b3UgYmVybmFyZCEifV0=",
			"Events": null,
			"Log": "",
			"Info": ""
		},
		"Key": null,
		"Value": null,
		"Proof": null,
		"Height": "0"
	},
	"data": [
		"",
		{
			"$error": "not for you bernard!"
		}
	]
}

-- gnokey-json-call-error.stderr.golden --
-- gnokey-json-call-object.stdout.golden --
{
	"response": {
		"ResponseBase": {
			"Error": null,
			"Data": "WyI8b2JqOipnbm8ubGFuZC9yL2Rldi9zaWxvLlNpbG86NmFlZDJlZGE3MmM3OWU0MTFlZWMxZWE3ZjY2MWM1ZTMwMzgzZmI1OToyPiJd",
			"Events": null,
			"Log": "",
			"Info": ""
		},
		"Key": null,
		"Value": null,
		"Proof": null,
		"Height": "0"
	},
	"data": [
		"<obj:*gno.land/r/dev/silo.Silo:6aed2eda72c79e411eec1ea7f661c5e30383fb59:2>"
	]
}

-- gnokey-json-call-object.stderr.golden --
-- gnokey-json-call-bytes.stdout.golden --
{
	"response": {
		"ResponseBase": {
			"Error": null,
			"Data": "WyJjMlZqY21WMElHMWxjM05oWjJVPSJd",
			"Events": null,
			"Log": "",
			"Info": ""
		},
		"Key": null,
		"Value": null,
		"Proof": null,
		"Height": "0"
	},
	"data": [
		"c2VjcmV0IG1lc3NhZ2U="
	]
}

-- gnokey-json-call-bytes.stderr.golden --
